GMM_Main/src/objects/Monitoring_Activity__c.object
<CustomObject>
    <description>Monitoring Activities associated to Monitoring Plans.</description>
    <fields>
        <fullName>Activity_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Complete__c</fullName>
        <formula>IF(ISNULL(Record_Completed_Date__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changes_to_Plan_Comments__c</fullName>
        <label>Changes to Plan/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Completion_Date__c</fullName>
        <label>Follow Up Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_Planned_Date__c</fullName>
        <label>Follow-up Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Close_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Close Out</label>
        <referenceTo>Grant_Close_Out__c</referenceTo>
        <relationshipLabel>Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactivate_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactivate Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Record_Reason__c</fullName>
        <label>Inactive Record (Reason)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiating_Office__c</fullName>
        <label>Initiating Office</label>
        <picklist>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint – Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint – Financial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Staff_Notes__c</fullName>
        <label>Internal Staff Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Grants Officer</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Program Officer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Monitoring_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Award_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Award Name</label>
        <referenceTo>Master_Award__c</referenceTo>
        <relationshipLabel>Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitoring_Activity__c</fullName>
        <label>Monitoring Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Programmatic &amp; Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Visit – Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawdown Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Training/Technical Assistance (T/TA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Standards review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted/Issue-based Site Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Fiscal_Year__c</fullName>
        <label>Monitoring Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Plan__c</fullName>
        <label>Monitoring Plan</label>
        <referenceTo>Monitoring_Plan__c</referenceTo>
        <relationshipLabel>Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Team_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Team User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Grants Officer</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Program Officer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Monitoring_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Month__c</fullName>
        <label>Planned Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Completed_Date__c</fullName>
        <label>Record Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Monitoring Activity</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Monitoring Activity Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Monitoring_Fiscal_Year</fullName>
        <active>true</active>
        <description>Requires 4 characters in the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>LEN(TRIM( Monitoring_Fiscal_Year__c  ))&lt;4</errorConditionFormula>
        <errorDisplayField>Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Requires 4 characters in the Monitoring Fiscal Year field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monitoring_Fiscal_Year_Number_only</fullName>
        <active>true</active>
        <description>Requires only numbers entered into the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>NOT(ISNUMBER(  Monitoring_Fiscal_Year__c  ))</errorConditionFormula>
        <errorDisplayField>Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Only enter numbers into the Monitoring Fiscal Year field.</errorMessage>
    </validationRules>
</CustomObject>